--- a/index.html
+++ b/index.html
@@ -1,43 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Website</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="responsivebox.css">
 </head>
 <body>
-  <header>
-    <h1>YouThrive. Simple Website</h1>
-  </header>
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-  <main>
-    <section id="home">
-      <h2>Welcome to Our Home Page</h2>
-      <p>This is some text about our website's home page.</p>
-    </section>
-    <section id="about">
-      <h2>About Us</h2>
-      <p>This is some text about our website's about page.</p>
-    </section>
-    <section id="services">
-      <h2>Our Services</h2>
-      <p>This is some text about our website's services page.</p>
-    </section>
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <p>This is some text about our website's contact page.</p>
-    </section>
-  </main>
-  <footer>
-    <p>&copy; 2023 My Simple Website</p>
-  </footer>
+    <header>
+        <h1>YouThrive. Simple Website</h1>
+    </header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul><
+        </nav>
+   
+    <main>
+        <section class="responsive-video">
+            <div class="videoWrapper">
+                <iframe width="560" height="349" src="http://www.youtube.com/embed/n_dZNLr2cME?rel=0&hd=1" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </section>
+        <!-- Main content goes here -->
+    </main>
+    <footer>
+        <!-- Footer content goes here -->
+    </footer>
 </body>
 </html>
